--- a/src/app/components/componentsheader/componentsheader.component.html
+++ b/src/app/components/componentsheader/componentsheader.component.html
@@ -1,14 +1,14 @@
 <div class="row">
-<div class="col-sm-6">
-   <div style="padding-top:10px"> <h6>{{pageName}}</h6></div>
-</div>
-<div class="col-sm-6" >
-<div style="float: right; padding: 5px;" *ngFor="let button of requiredButton; let i = index">
-    <button   [outline]='button.outline'   nbButton status="primary" >
-        <nb-icon *ngIf="button.icon" icon="{{button.icon}}"></nb-icon>&nbsp;{{button.name}}
-    </button>
-</div>
+    <div class="col-sm-6">
+       <div style="padding-top:10px"> <h6>{{pageName}}</h6></div>
+    </div>
+    <div class="col-sm-6" >
+    <div style="float: right; padding: 5px;" *ngFor="let btn of requiredButton; let i = index">
+        <button   [outline]='btn.outline' (click)="buttonClick.emit(btn.name)"   nbButton status="primary" >
+            <nb-icon *ngIf="btn.icon" icon="{{btn.icon}}"></nb-icon>&nbsp;{{btn.label}}
+        </button>
+    </div>
+        
+    </div>
+    </div>
     
-</div>
-</div>
-
