Implemented Modularization and started work on Request module

--- a/src/app/@theme/styles/themes.scss
+++ b/src/app/@theme/styles/themes.scss
@@ -97,7 +97,11 @@ color-primary-500: #4847E0,
 color-primary-600: #9494da,
 color-primary-700: #7c7cd6,
 color-primary-800: #6060e4,
-color-primary-900: #29157a,   
+color-primary-900: #29157a,
+color-grey-1: #343A40,
+color-grey-2: #6C757D,
+color-grey-3: #95A8B8,
+
 
 
 layout-padding-top: 2.25rem,
