--- a/src/app/pages/dashboard/dashboard.component.html
+++ b/src/app/pages/dashboard/dashboard.component.html
@@ -1,2 +1,4 @@
-<ngx-componentsheader [pageName]="pagetitle" [requiredButton]="rbutton"></ngx-componentsheader>
+<ngx-componentsheader [pageName]="pagetitle" [requiredButton]="rbutton">
+</ngx-componentsheader>
 <p>dashboard works!</p>
+<button (click)="openModal()">Open</button>
