--- a/src/app/components/componentsheader/componentsheader.component.html
+++ b/src/app/components/componentsheader/componentsheader.component.html
@@ -3,12 +3,10 @@
    <div style="padding-top:10px"> <h6>{{pageName}}</h6></div>
 </div>
 <div class="col-sm-6" >
-<div style="float: right; padding: 5px;" *ngFor="let button of requiredButton; let i = index">
-    <button   [outline]='button.outline'   nbButton status="primary" >
-        <nb-icon *ngIf="button.icon" icon="{{button.icon}}"></nb-icon>&nbsp;{{button.name}}
+<div style="float: right; padding: 5px;">
+    <button outline   nbButton status="primary" >
+        Send
     </button>
-</div>
-    
 </div>
 </div>
 
