--- a/src/app/modules/requests-and-complaints/main/main.component.scss
+++ b/src/app/modules/requests-and-complaints/main/main.component.scss
@@ -66,3 +66,24 @@
     cursor: pointer;
     color: #4847E0;
 }
+
+.space-2{
+    margin: 5px;
+}
+
+.spinner{
+    
+}
+
+div::-webkit-scrollbar {
+    width: 1px;
+  }
+   
+div::-webkit-scrollbar-track {
+    box-shadow: inset 0 0 1px rgba(0, 0, 0, 0.3);
+  }
+   
+  div::-webkit-scrollbar-thumb {
+    background-color: darkgrey;
+    outline: 1px solid slategrey;
+  }
