--- a/src/app/components/wysisyg-input/wysisyg-input.component.html
+++ b/src/app/components/wysisyg-input/wysisyg-input.component.html
@@ -1,3 +1,4 @@
 <div style="width: 100%; margin: 20px">
     <ckeditor [config]="{ extraPlugins: 'divarea', height: '320' }" [(ngModel)]="model" (change)="onChange()"> </ckeditor>
+    <div style="width: 100%; background-color: #F5F5FA;">
 </div>
