Initialized communication implementation

--- a/src/app/components/tablecomponent/tablecomponent.component.html
+++ b/src/app/components/tablecomponent/tablecomponent.component.html
@@ -10,7 +10,7 @@
         </thead>
           <tbody>
             <ng-container *ngIf="!loading">
-            <tr *ngFor="let data of tableData;let i = index">
+            <tr *ngFor="let data of userData;let i = index">
               <td *ngIf="showCheckBox">
                 <div style="padding: 10px;">
                   <nb-checkbox></nb-checkbox> 
