--- a/src/app/components/side-modal/side-modal.component.html
+++ b/src/app/components/side-modal/side-modal.component.html
@@ -2,7 +2,7 @@
     <!-- <div style="flex: auto"></div>     -->
     <div style="flex: auto" (click)="closeModal()"></div>
     <!-- <div > -->
-        <div style="background-color: white;"  class="modal-p" [class]="{center: center}">
+        <div style="background-color: white;     overflow: scroll;"  class="modal-p" [class]="{center: center}">
             <div style="height: 75px;"></div>
             <div class="header">
                 <ng-content select='[modal-header]'>
@@ -11,7 +11,7 @@
             <div class="body">
                 <ng-content select='[modal-body]'></ng-content>
             </div>
-            <div class="actions">
+            <div class="actions side-modal-actions">
                 <ng-content select='[modal-actions]'></ng-content>
             </div>
         </div>
