tenantOnboarding and loginsignin

--- a/src/app/modules/auth/signup/signup.component.html
+++ b/src/app/modules/auth/signup/signup.component.html
@@ -22,6 +22,11 @@
                     </div>
                     <div style="padding: 5px;"></div>
                     <div class="form-group">
+                        <label for="exampleInputEmail1" class="label">Phone Number</label>
+                        <input type="text" nbInput fullWidth id="exampleInputEmail1" placeholder="Phone Number">
+                    </div>
+                      <div style="padding: 5px;"></div>
+                    <div class="form-group">
                       <label for="exampleInputPassword1" class="label">Password</label>
                       <div style="display: flex;border: 0.800000011920929px solid #CED4DA;border-radius: 3px;background-color: #f7f9fc;padding: 5px;">
                         <input type="password" nbInput fullWidth id="exampleInputPassword1" placeholder="Password" style="border: none;">
@@ -29,14 +34,13 @@
                       </div>
                       
                     </div>
-                    <p style="text-align: right;font-size: .8rem;color: #080730;font-weight: 700;"><a routerLink="/auth/signup">Forgot Password?</a></p>
-                 
+                    <div style="padding: 5px;"></div>
                   
                     <button type="button" nbButton fullWidth status="primary">Submit</button>
                     <div style="padding: 5px;"></div>
                   </form>
                   <div style="padding: 5px;"></div>
-                  <p style="text-align: center;font-size: .9rem;color: #080730;font-weight: 600;">Don’t have an account? <a routerLink="/auth/signup" style="font-weight: 700;">Sign Up</a></p>
+                  <p style="text-align: center;font-size: .9rem;color: #080730;font-weight: 600;">I have an account? <a routerLink="/auth/login" style="font-weight: 700;">Sign In</a></p>
                   </div>
                 </div>
             </div>
