--- a/src/app/components/file-upload/file-upload.component.scss
+++ b/src/app/components/file-upload/file-upload.component.scss
@@ -1,3 +1,11 @@
+:host{
+	height: unset;
+}
+
+.drop{
+	width: 100%;
+	cursor: pointer;
+}
 .inputfile {
 	width: 0.1px;
 	height: 0.1px;
@@ -6,7 +14,10 @@
 	position: absolute;
   z-index: -1;
   position: absolute;
+}
 
+input{
+	display: none;
 }
 
 .filebutton {
