--- a/src/app/modules/communication/page/settings/settings.component.html
+++ b/src/app/modules/communication/page/settings/settings.component.html
@@ -30,8 +30,12 @@
         <input class="form-control" type="checkbox" />
       </div>
       <div class="form-group">
+        <label>Files</label>
+        <ngx-file-upload class="form-control"></ngx-file-upload>
+      </div>
+      <div class="form-group">
         <label>Allow sending of mails</label>
-        <input class="form-control" type="checkbox" />
+        <input type="checkbox" />
       </div>
       <div class="form-group" style="margin-top: 20px">
         <label></label>
@@ -40,3 +44,6 @@
     </div>
   </div>
 </div>
+
+<ngx-employee-master-search></ngx-employee-master-search>
+<ngx-file-upload></ngx-file-upload>
