--- a/src/app/@theme/styles/themes.scss
+++ b/src/app/@theme/styles/themes.scss
@@ -126,5 +126,10 @@ slide-out-shadow-color-rtl: 0 4px 14px 0 #8f9bb3,
 //Modifiable
 header-background-color: #4847E0,
 header-text-color: #ffffff,
-link-text-decoration: none
+link-text-decoration: none,
+
+//tabset
+tabset-tab-text-transform: none,
+tabset-tab-padding: 1rem 2rem 1rem 0rem,
+tabset-content-padding: 0px
 ),smartace, default)
