--- a/src/app/@theme/styles/themes.scss
+++ b/src/app/@theme/styles/themes.scss
@@ -131,5 +131,8 @@ link-text-decoration: none,
 //tabset
 tabset-tab-text-transform: none,
 tabset-tab-padding: 1rem 2rem 1rem 0rem,
-tabset-content-padding: 0px
+tabset-content-padding: 0px,
+
+//Side Menu
+menu-item-divider-style: none
 ),smartace, default)
