--- a/src/app/@theme/styles/styles.scss
+++ b/src/app/@theme/styles/styles.scss
@@ -1,5 +1,5 @@
 @import url('https://fonts.googleapis.com/css?family=Open+Sans:400,600,700&display=swap');
-
+@import url('https://fonts.googleapis.com/css2?family=Rubik:wght@300;400;500;700&display=swap');
 // themes - our custom or/and out of the box themes
 @import 'themes';
 
@@ -76,7 +76,7 @@ h1{
   text-align: left;
   font-size: 24px;
   line-height: 28px;
-  font-family: Rubik;
+  font-family: 'Rubik';
   letter-spacing: 0px;
   color: #080730;
   opacity: 1;
@@ -134,6 +134,134 @@ h1{
 
 .main-page-container{
   background-color: white; padding: 30px
+}
+
+.header6-normal{
+  font-style: normal !important;
+  font-variant:normal !important;
+  font-weight: normal !important;
+  font-size: 16px !important;
+  line-height: 24px !important;
+  font-family: 'Rubik', sans-serif !important;
+letter-spacing: 0px;
+color: #343A40;
+opacity: 1;
+}
+.header6-medium{
+  font-style: normal !important;
+  font-variant:normal !important;
+  font-weight: 500 !important;
+  font-size: 16px !important;
+  line-height: 24px !important;
+  font-family: 'Rubik', sans-serif !important;
+letter-spacing: 0px;
+color: #080730 !important;
+opacity: 1 !important;
+}
+
+.header6-bold{
+  font-style: normal !important;
+  font-variant:normal !important;
+  font-weight: bold !important;
+  font-size: 16px !important;
+  line-height: 24px !important;
+  font-family: 'Rubik', sans-serif !important;
+letter-spacing: 0px !important;
+color: #080730 !important;
+opacity: 1 !important;
+}
+
+.header5-normal{
+  font-style: normal !important;
+  font-variant:normal !important;
+  font-weight: normal !important;
+  font-size: 22px !important;
+  line-height: 24px !important;
+  font-family: 'Rubik', sans-serif !important;
+
+letter-spacing: 0px !important;
+color: #343A40 !important;
+opacity: 1 !important;
+}
+.header5-medium{
+  font-style: normal !important;
+  font-variant:normal !important;
+  font-weight: 500 !important;
+  font-size: 22px !important;
+  line-height: 24px !important;
+  font-family: 'Rubik', sans-serif !important;
+letter-spacing: 0px;
+color: #080730;
+opacity: 1;
+}
+.header5-bold{
+  font-style: normal !important;
+  font-variant:normal !important;
+  font-weight: bold !important;
+  font-size: 22px !important;
+  line-height: 24px !important;
+  font-family: 'Rubik', sans-serif !important;
+letter-spacing: 0px;
+color: #080730;
+opacity: 1;
+}
+
+.header4-normal{
+font-style: normal !important;
+font-variant:normal !important;
+font-weight: normal !important;
+font-size: 24px !important;
+line-height: 28px !important;
+font-family: 'Rubik', sans-serif !important;
+letter-spacing: 0px;
+color: #080730;
+opacity: 1;
+}
+.header4-medium{
+font-style: normal !important;
+font-variant:normal !important;
+font-weight: 500 !important;
+font-size: 24px !important;
+line-height: 28px !important;
+font-family: 'Rubik', sans-serif !important;
+letter-spacing: 0px;
+color: #080730;
+opacity: 1;
+}
+.header4-bold{
+font-style: normal !important;
+font-variant:normal !important;
+font-weight: bold !important;
+font-size: 24px !important;
+line-height: 28px !important;
+font-family: 'Rubik', sans-serif !important;
+letter-spacing: 0px;
+color: #080730;
+opacity: 1;
+}
+
+.p-normal{
+font-style: normal !important;
+font-variant:normal !important;
+font-weight: normal !important;
+font-size: 14px !important;
+line-height: 17px !important;
+font-family: 'Rubik',sans-serif;
+letter-spacing: 0px;
+color: #343A40;
+opacity: 1;
+}
+
+.listsubheader{
+  font-style: normal !important;
+font-variant:normal !important;
+font-weight: normal !important;
+font-size: 16px !important;
+line-height: 22px !important;
+font-family: 'Rubik',sans-serif;
+letter-spacing: 0px;
+color: #080730;
+opacity: 1;
 }
 
 @media screen and (max-width: 992px) {
