--- a/src/app/modules/self-service/dashboard/dashboard.component.scss
+++ b/src/app/modules/self-service/dashboard/dashboard.component.scss
@@ -42,31 +42,20 @@ h6{
 .q-connector {
     position: relative;
     &::before{
-        content: '';
-        width: 1.19rem;
-        height: 1.19rem;
-        background: #4847E033 0% 0% no-repeat padding-box;
-        border: 1px solid #4847E0;
-        opacity: 1;
-        border-radius: 50%;
-        display: block;
+        content: url(../../../../assets/icons/tick-small.jpg);    
     }
     &::after {
-      margin:18px;
-      border-width: 0 0 0 2px;
-      top: 40%;
+      margin:10px 2px 10px 12px;
+      border-width: 2px;
+      left: 40%;
     }
 
     &::after {
-      content: '';
-      left: -12px;
-      border-color: #4847E0;
-      border-style: dashed;
-      width: 9px;
-      height: calc(50% + 20px);
+      content: ''; 
+      border-top: 1px #4847E0 solid;
+      width: calc(50% + 5rem);
       position: absolute;
     }
-
 
   }
 
