--- a/src/app/modules/tenantonboarding/onboardingsetup/onboardingsetup.component.html
+++ b/src/app/modules/tenantonboarding/onboardingsetup/onboardingsetup.component.html
@@ -11,7 +11,7 @@
                 <!--Company Panel ////////////////////////////////-->
                 <div class="fmContainer" *ngSwitchCase="'companyPanel'">
                     <div style="border-bottom: 0.800000011920929px solid #CED4DA;padding-bottom: 10px;">
-                   <p>Input Company’s Information in the fields below</p>
+                   <p class="listsubheader">Input Company’s Information in the fields below</p>
                    </div>
                    <div style="display: flex; padding-top: 2rem;">
                        <div class="circular--portrait">
@@ -20,7 +20,7 @@
                        <div style="display:flex;align-items: center;padding:2rem">
                            <span>
                            <a href="javascript:void(0)">Add Company Logo</a>
-                           <p>Maximum size allowed is 600kb of PNG,JPEG,JPG</p>
+                           <p class="p-normal">Maximum size allowed is 600kb of PNG,JPEG,JPG</p>
                            </span>
                        </div>
                    </div>
@@ -28,55 +28,55 @@
                    <div style="padding-top:3rem;">
                     <form>
                         <div class="form-group row">
-                          <label for="inputEmail1" class="label col-sm-4 col-form-label">Company RC-Number</label>
+                          <label for="inputEmail1" class="label col-sm-4 col-form-label listsubheader">Company RC-Number</label>
                           <div class="col-sm-8">
                             <input type="text" nbInput fullWidth  placeholder="Company RC-Number">
                           </div>
                         </div>
                         <div class="form-group row">
-                            <label for="inputEmail1" class="label col-sm-4 col-form-label">Company Email</label>
+                            <label for="inputEmail1" class="label col-sm-4 col-form-label listsubheader">Company Email</label>
                             <div class="col-sm-8">
                               <input type="text" nbInput fullWidth  placeholder="Company Email">
                             </div>
                           </div>
                           <div class="form-group row">
-                            <label for="inputEmail1" class="label col-sm-4 col-form-label">Phone Number</label>
+                            <label for="inputEmail1" class="label col-sm-4 col-form-label listsubheader">Phone Number</label>
                             <div class="col-sm-8">
                               <input type="text" nbInput fullWidth  placeholder="Phone Number">
                             </div>
                           </div>
                           <div class="form-group row">
-                            <label for="inputEmail1" class="label col-sm-4 col-form-label">Domain Name</label>
+                            <label for="inputEmail1" class="label col-sm-4 col-form-label listsubheader">Domain Name</label>
                             <div class="col-sm-8">
                               <input type="text" nbInput fullWidth  placeholder="Domain Name">
                             </div>
                           </div>
                           <div class="form-group row">
-                            <label for="inputEmail1" class="label col-sm-4 col-form-label">Auditor Email</label>
+                            <label for="inputEmail1" class="label col-sm-4 col-form-label listsubheader">Auditor Email</label>
                             <div class="col-sm-8">
                               <input type="email" nbInput fullWidth  placeholder="Auditor Email">
                             </div>
                           </div>
                           <div class="form-group row">
-                            <label for="inputEmail1" class="label col-sm-4 col-form-label">Administrator Email</label>
+                            <label for="inputEmail1" class="label col-sm-4 col-form-label listsubheader">Administrator Email</label>
                             <div class="col-sm-8">
                               <input type="email" nbInput fullWidth  placeholder="Administrator Email">
                             </div>
                           </div>
                           <div class="form-group row">
-                            <label for="inputEmail1" class="label col-sm-4 col-form-label">Max Employee Count</label>
+                            <label for="inputEmail1" class="label col-sm-4 col-form-label listsubheader">Max Employee Count</label>
                             <div class="col-sm-8">
                               <input type="text" nbInput fullWidth  placeholder="Max Employee Count">
                             </div>
                           </div>
                           <div class="form-group row">
-                            <label for="inputEmail1" class="label col-sm-4 col-form-label">Company Address</label>
+                            <label for="inputEmail1" class="label col-sm-4 col-form-label listsubheader">Company Address</label>
                             <div class="col-sm-8">
                               <input type="text" nbInput fullWidth  placeholder="Company Address">
                             </div>
                           </div>
                           <div class="form-group row">
-                            <label for="inputEmail1" class="label col-sm-4 col-form-label">About Company</label>
+                            <label for="inputEmail1" class="label col-sm-4 col-form-label listsubheader">About Company</label>
                             <div class="col-sm-8">
                                 <textarea rows="5" nbInput fullWidth   placeholder="Text Area"></textarea>
                             </div>
@@ -99,7 +99,7 @@
 <!--Subscription Panel ////////////////////////////////-->
 <div class="fmContainer" *ngSwitchCase="'subscriptionPanel'">
     <div >
-   <p>Select your preferred package</p>
+   <p class="listsubheader">Select your preferred package</p>
    </div>
 <div style="padding-top:.5rem;">
     <nb-tabset>
@@ -110,12 +110,12 @@
         border: 0.5px solid #CCCCCC;
         border-radius: 4px;
         opacity: 1;">
-            <h5>SmartAce Basic Online Plan A</h5>
-            <p>Maximum Employee: 10</p>
-            <p>Minimal Access To The System Modules</p>
+            <h6 class="header6-medium">SmartAce Basic Online Plan A</h6>
+            <p class="p-normal">Maximum Employee: 10</p>
+            <p class="p-normal"><nb-icon icon="info" status="primary"></nb-icon>&nbsp;Minimal Access To The System Modules</p>
             <div class="row">
                 <div class="col-md-8">
-                    <h2>#3,000</h2>
+                    <h5 class="header6-bold">#3,000</h5>
                 </div>
                 <div class="col-md-4">
                     <button style="text-transform: none !important;" type="submit" nbButton status="primary" (click)="proceedtosubcription()">Subscribe</button>
@@ -144,9 +144,9 @@
 
             </div>
             <div class="col-md-3" style="margin: 5px;">
-                <div class="fmContainer">
+                <div class="fmContainer" style="padding:4rem 2rem 4rem 2rem;">
                     <div style="padding-bottom: 10px;">
-                        <p>Account Setup</p>
+                        <p class="header6-medium">Account Setup</p>
                     </div>
                     <div class="row">
                         <div class="col-md-12 " style="display: flex;flex-direction: column;">
