--- a/src/app/@theme/styles/styles.scss
+++ b/src/app/@theme/styles/styles.scss
@@ -246,9 +246,9 @@ font-variant:normal !important;
 font-weight: normal !important;
 font-size: 14px !important;
 line-height: 17px !important;
-font-family: 'Rubik',sans-serif;
+font-family: 'Rubik',sans-serif !important;
 letter-spacing: 0px;
-color: #343A40;
+color: #343A40  !important;
 opacity: 1;
 }
 
@@ -258,9 +258,9 @@ font-variant:normal !important;
 font-weight: normal !important;
 font-size: 16px !important;
 line-height: 22px !important;
-font-family: 'Rubik',sans-serif;
+font-family: 'Rubik',sans-serif !important;
 letter-spacing: 0px;
-color: #080730;
+color: #080730 !important;
 opacity: 1;
 }
 
