--- a/src/app/modules/self-service/modalform/modalform.component.html
+++ b/src/app/modules/self-service/modalform/modalform.component.html
@@ -1,1 +1,23 @@
-<p>modalform works!</p>
+<form action="/action_page.php">
+    <h6 style="border: 10px  #CCC; background-color: #F5F5FA; font-size: small; padding: 15px; width: 300px;
+    margin-left: 10px;" >create new events</h6>
+    <div style="margin: 20px;">
+        <div class="form-group">
+            <label for="Title">Title:</label>
+            <input type="text" class="form-control" placeholder="Enter title" id="Title">
+        </div>
+        <div class="form-group">
+            <label for="End  Date">End Date:</label>
+            <input type="number" class="form-control" placeholder="Enter Date" id="End Date">
+        </div>
+        <div class="form-group">
+            <label for="Description">Description</label>
+            <textarea type="textarea" class="form-control" placeholder="Enter Description" id="Description"></textarea>
+        </div>
+        <div class="form-group form-check">
+
+        </div>
+        <button type="submit" class="btn btn-primary"
+            style="margin-left: 0px; margin-top: 20px;padding-left: 15px ;width: 400px; padding-right: 15px; margin-bottom: 15px; width: fit-content">Submit</button>
+    </div>
+</form>
