--- a/src/app/modules/self-service/dashboard/dashboard.component.html
+++ b/src/app/modules/self-service/dashboard/dashboard.component.html
@@ -37,7 +37,7 @@
                                     <h6 style="font-size: x-small;">sherif@smartace.ng</h6>
                                 </div>
                             </div>
-                            <div class="d-flex mt-4" style="margin-left: 15px; padding-bottom: 10px;"> 
+                            <div class="d-flex mt-4" style="margin-left: 15px; padding-bottom: 10px;">
                                 <div class="mt-2">
                                     <i class="fas fa-users" style="color: blue;"></i>
                                 </div>
@@ -107,19 +107,24 @@
                                 <div class="q-connector" style="width: 10px;display: flex; flex-direction: row;"></div>
                             </div>
                             <div style="width: 100%; padding: 2px 0px 0px 10px;">
-                                personal information
+                                work infomation
                             </div>
 
                             <div style="display: flex; padding-top: 30px;">
                                 <div class="q-connector" style="width: 10px;display: flex; flex-direction: row;"></div>
                             </div>
                             <div style="width: 50px; padding: 2px 0px 0px 10px;">
-                                personal information
+                                medical closure
                             </div>
 
-
+                             
 
                         </div>
+
+                        <div class="d-flex" style="display: flex; " style="margin-top: 30px; flex: auto;">
+                            <p class="card-title">continue where you left off</p>
+                            <a href="#" style="margin-left: 30px; border: #ccc;  background-color: #F5F5FA; padding: 15px;">See Profile</a>
+                          </div>
 
                         <div class="paid">
                             <div class="card" *ngFor="let i of [1, 2, 3, 4, 5, 6]">
@@ -139,12 +144,12 @@
 
             </div>
             <div class="col-md-4">
-                <div class="card" style="margin-left: 2px">
+                <div class="card" style="margin-left: 2px ;">
                     <div class="card-title mt-5 mr-5" style="font-weight: bolder; margin-right: 70px;">Events
                     </div>
-                    <div class=" card-body d-flex mt-2">
+                    <div class="card-body d-flex mt-2">
 
-                        <div class="mt-2" *ngFor="let day_no of [0,1,2,3,4]">
+                        <div class="mt-2 date-circle" *ngFor="let day_no of [0,1,2,3,4]" style="margin-bottom: -80px;">
                             <div class="pl-2 pr-2 pt-1 rounded-circle  text-white"
                                 [class]="{'bg-primary': weekdays[day_no].getDay() == today.getDay()}">
                                 <h6 style="font-size: xx-small;">{{weekdays[day_no] | date:"MMM"}}</h6>
@@ -177,15 +182,16 @@
 
 
                     </div>
-                    <div class="card-body zee" style="margin-top: -10px;" *ngFor= "let i of [0,1,2,3,4,5]">
-                        <h4 class="card-title" style="font-size: small;">Workshop</h4>
-                        <p class="card-text">Managing employeed</p>
-                        <p class="card-text">11am - 12pm</p>
-
-                       
-                        
-                        
+                    <div class="zee">
+                        <div class="card-body" style="margin-top: -10px;" *ngFor="let i of [0,1,2,3,4,5]">
+                            <h4 class="card-title" style="font-size: small;">Workshop</h4>
+                            <p class="card-text">Managing employeed</p>
+                            <p class="card-text">11am - 12pm</p>
+    
+    
+                        </div>
                     </div>
+                   
 
 
 
@@ -201,10 +207,11 @@
         </div>
 
         <div class="quick-actions-section">
-            <h6 class="card-title pl-5 mt-2" style="font-size: small; margin-bottom: 50px; margin-top: 20px;">Quick Action</h6>
-            <div style="display: flex;" style="width: 100%; overflow: scroll; padding-bottom: 10px;">
+            <h6 class="card-title pl-5 mt-2" style="font-size: small; margin-bottom: 50px; margin-top: 20px;">Quick
+                Action</h6>
+            <div style="display: flex;" style="width: 100%; height: 100%; overflow: scroll; padding-bottom: 10px;">
                 <div class="quick-actions">
-                    <div class="card " style="margin-bottom: 20px;">
+                    <div class="card ">
                         <div class="card-body text-center">
                             <p class="card-text" style="font-size: smaller;">Company's Organagram</p>
                             <p class="card-text opaq" style="font-size: xx-small; margin-top: -15px;">View the
@@ -348,11 +355,11 @@
                                 <h6 style="font-size: small; font-weight: lighter;">Reporting manager</h6>
                                 <i class="fas fa-envelope" style="color: blue; float: right;margin-top: 5px;"></i>
                             </div>
-                            <div class="ml-2" style="margin-top: 63px;"*ngFor="let i of [0,1,2,3,4]">
+                            <div class="ml-2" style="margin-top: 63px;" *ngFor="let i of [0,1,2,3,4]">
                                 <h6 style="font-size: small; font-weight: lighter;">Reporting manager</h6>
                                 <i class="fas fa-envelope" style="color: blue; float: right;margin-top: 5px;"></i>
                             </div>
-                            
+
                         </div>
                     </div>
 
