--- a/src/app/modules/self-service/dashboard/dashboard.component.scss
+++ b/src/app/modules/self-service/dashboard/dashboard.component.scss
@@ -10,7 +10,14 @@ h6{
 }
 
 .dashboard-header{
+    height: 250px;
+    margin: 25px;
     margin-bottom: -90px;
+    font-size: xx-large;
+    color: white;
+    padding-left: 20px;
+    padding-top: 20px;
+    font-weight: bold;
     // margin-left: -58px;
     // margin-right: -60px;
 }
@@ -112,5 +119,9 @@ h6{
   }
 
   .zee {
-    height: 100px; overflow: scroll; padding-bottom: 10px
+    height: 400px; overflow: scroll; padding-bottom: 10px;margin-top: -1000px;
+  }
+
+  .date-circle{
+    height: 50px;
   }
