--- a/src/app/@theme/styles/styles.scss
+++ b/src/app/@theme/styles/styles.scss
@@ -133,7 +133,9 @@ h1{
 }
 
 .main-page-container{
-  background-color: white; padding: 30px
+  background-color: white;
+  padding: 30px;
+  height: 100%;
 }
 
 .header6-normal{
