--- a/src/app/modules/auth/signup/signup.component.html
+++ b/src/app/modules/auth/signup/signup.component.html
@@ -36,7 +36,7 @@
                     </div>
                     <div style="padding: 5px;"></div>
                   
-                    <button type="button" nbButton fullWidth status="primary">Submit</button>
+                    <button type="button" (click)="gotoSetup()" nbButton fullWidth status="primary">Sign Up</button>
                     <div style="padding: 5px;"></div>
                   </form>
                   <div style="padding: 5px;"></div>
