--- a/src/app/pages/dashboard/dashboard.component.html
+++ b/src/app/pages/dashboard/dashboard.component.html
@@ -1,2 +1,138 @@
-<p>dashboard works!</p>
-<button (click)="openModal()">Open</button>
+<div class="row">
+    <div class="col-xxxl-3 col-md-3" >
+      <nb-card>
+        <div style="padding: 10px;display: flex; flex-direction: row;">
+       <div style="display: flex;align-items: center;">
+         <img src="assets/icons/department.jpg" style="width:3rem;">
+       </div>
+       <div style="flex-direction: column; padding-left: 10px;">
+        <div style="padding:5px">
+        <span class="smalltext">
+          No of employees
+        </span>
+        </div>
+        <div style="padding:5px">
+          <span class="header5-bold">20,345</span>
+        </div>
+       </div>
+       </div>
+       </nb-card>
+    </div>
+    <div class="col-xxxl-3 col-md-3" >
+      <nb-card>
+        <div style="padding: 10px;display: flex; flex-direction: row;">
+       <div style="display: flex;align-items: center;">
+         <img src="assets/icons/department.jpg" style="width:3rem;">
+       </div>
+       <div style="flex-direction: column; padding-left: 10px;">
+        <div style="padding:5px">
+        <span class="smalltext">
+          Due for retirement
+        </span>
+        </div>
+        <div style="padding:5px">
+          <span class="header5-bold">3,245</span>
+        </div>
+       </div>
+       </div>
+       </nb-card>
+    </div>
+    <div class="col-xxxl-3 col-md-3" >
+      <nb-card>
+        <div style="padding: 10px;display: flex; flex-direction: row;">
+       <div style="display: flex;align-items: center;">
+         <img src="assets/icons/department.jpg" style="width:3rem;">
+       </div>
+       <div style="flex-direction: column; padding-left: 10px;">
+        <div style="padding:5px">
+        <span class="smalltext">
+          Due for promotion
+        </span>
+        </div>
+        <div style="padding:5px">
+          <span class="header5-bold">589</span>
+        </div>
+       </div>
+       </div>
+       </nb-card>
+    </div>
+    <div class="col-xxxl-3 col-md-3" >
+      <nb-card>
+        <div style="padding: 10px;display: flex; flex-direction: row;">
+       <div style="display: flex;align-items: center;">
+         <img src="assets/icons/department.jpg" style="width:3rem;">
+       </div>
+       <div style="flex-direction: column; padding-left: 10px;">
+        <div style="padding:5px">
+        <span class="smalltext">
+          Due for confirmation
+        </span>
+        </div>
+        <div style="padding:5px">
+          <span class="header5-bold">6,675</span>
+        </div>
+       </div>
+       </div>
+       </nb-card>
+    </div>
+  </div>
+
+  <div class="row">
+    <div class="col-xxxl-6 col-md-6" >
+        <nb-card>
+  
+            <nb-card-body>
+              <div style="display: flex;justify-content: center;height: 18rem;width: 100%;padding-top:30px">
+                <canvas width="100%"  #pieChart></canvas>
+              </div>
+           
+            </nb-card-body>
+          </nb-card>
+    </div>
+    <div class="col-xxxl-6 col-md-6" >
+        <nb-card>         
+            <nb-card-body>
+<div style="height: 18rem;width: 100%;">
+  <div echarts [options]="options" class="echart" style="height: 100%;"></div>
+</div>
+               
+            </nb-card-body>
+          </nb-card>
+    </div>
+
+  </div>
+
+  <div class="row">
+    <div class="col-xxxl-6 col-md-6" >
+        <nb-card>
+  
+            <nb-card-body>
+              <ngx-charts-bar-vertical 
+              [view]="view" 
+              [scheme]="barcolorScheme" 
+              [results]="single" 
+              [gradient]="gradient"
+              [xAxis]="showXAxis" 
+              [yAxis]="showYAxis" 
+              [legend]="showLegend" 
+              [showXAxisLabel]="showXAxisLabel"
+              [showYAxisLabel]="showYAxisLabel" 
+              [xAxisLabel]="xAxisLabel" 
+              [yAxisLabel]="yAxisLabel"
+              [showGridLines]="showGridLines"
+              [barPadding]="barPadding"
+          >
+            </ngx-charts-bar-vertical>
+           
+            </nb-card-body>
+          </nb-card>
+    </div>
+    <div class="col-xxxl-6 col-md-6" >
+        <nb-card>         
+            <nb-card-body>
+               
+            </nb-card-body>
+          </nb-card>
+    </div>
+
+  </div>
