--- a/src/app/@theme/styles/styles.scss
+++ b/src/app/@theme/styles/styles.scss
@@ -20,7 +20,6 @@
 
 // install the framework and custom global styles
 @include nb-install() {
-
   // framework global styles
   @include nb-theme-global();
   @include nb-auth-global();
@@ -252,6 +251,18 @@ color: #343A40  !important;
 opacity: 1;
 }
 
+.p-300{
+  font-style: normal !important;
+font-variant:normal !important;
+font-weight: 300 !important;
+font-size: 16px !important;
+line-height: 28px !important;
+font-family: 'Rubik',sans-serif !important;
+letter-spacing: 0px;
+color: #130019  !important;
+opacity: 1;
+}
+
 .listsubheader{
   font-style: normal !important;
 font-variant:normal !important;
@@ -262,6 +273,21 @@ font-family: 'Rubik',sans-serif !important;
 letter-spacing: 0px;
 color: #080730 !important;
 opacity: 1;
+}
+.smalltext{
+  font-style: normal !important;
+  font-variant:normal !important;
+  font-weight: normal !important;
+  font-size: 12px !important;
+  line-height: 22px !important;
+  font-family: 'Rubik',sans-serif !important;
+letter-spacing: 0px;
+color: #130019;
+opacity: 1;
+}
+button{
+  text-transform: none !important;
+  min-width: 144px !important;
 }
 
 @media screen and (max-width: 992px) {
