--- a/src/app/modules/modules.component.html
+++ b/src/app/modules/modules.component.html
@@ -1,4 +1,10 @@
 <ngx-one-column-layout>
     <nb-menu [items]="menu"></nb-menu>
-    <router-outlet></router-outlet>
+    <!-- <ngx-my-menu [items]="menu"></ngx-my-menu> -->
+    <!-- <ngx-side-modal></ngx-side-modal> -->
+
+    <router-outlet>
+        
+    </router-outlet>
+   
 </ngx-one-column-layout>
