--- a/src/app/modules/training/plans/plans.component.html
+++ b/src/app/modules/training/plans/plans.component.html
@@ -45,7 +45,7 @@
           <div class="col-sm-4">
             <!-- <input [nbDatepicker]="rangepicker"> <nb-rangepicker #rangepicker></nb-rangepicker>
             in -->
-            <input type="date" class="date-div" name="" id="" placeholder="From" style="border-radius: 5px; border: 1px solid #CBCBCD;"><span style="padding-right: 5px;"></span><input class="date-div" type="date" name="" id="" placeholder="To">
+            <input type="text" class="date-div" name="" id="" placeholder="From" style="border-radius: 5px; border: 1px solid #CBCBCD;" onfocus="(this.type='date')"><span style="padding-right: 5px;"></span><input class="date-div" type="date" name="" id="" placeholder="To">
           </div>
         </div>
 
@@ -74,7 +74,7 @@
                 </span>
                 Add Beneficiary
             </button>
-            <ngx-add-beneficiary></ngx-add-beneficiary>
+            <ngx-employee-master-search></ngx-employee-master-search>
 
           </div>
 
