--- a/src/app/modules/communication/page/templates/templates.component.html
+++ b/src/app/modules/communication/page/templates/templates.component.html
@@ -10,7 +10,7 @@
     class="col-md-3 col-sm-4"
   >
     <div class="card black" style="padding: 30px; margin: 30px; background-color: white">
-      <i class="fa fa-file" aria-hidden="true" style="padding: 5px;"></i>
+      <nb-icon icon="file-text-outline"></nb-icon>
       <div style="padding: 5px;">Deployment</div>
     </div>
   </div>
